--- a/assets/scss/global/_mixins.scss
+++ b/assets/scss/global/_mixins.scss
@@ -15,8 +15,8 @@
   width: 100%;
   height: 70rem;
   background-color: $cl-gray-800;
-  box-shadow: inset 0.4rem 0 $cl-red-700, 0 0 15px $cl-gray-900;
-  border-radius: 4px; 
+  box-shadow: inset 0.4rem 0 $cl-primary, 0 0 15px $cl-gray-900;
+  border-radius: 4px;
   position: relative;
 }
 
@@ -29,8 +29,8 @@
   font-weight: 400;
   text-transform: uppercase;
   letter-spacing: 1.2rem;
-  color: $cl-red-700;  
-  z-index: 30; 
+  color: $cl-primary;
+  z-index: 30;
 
   @include respond(phone) {
     font-size: 9.6rem;
@@ -46,14 +46,13 @@
   color: $cl-gray-700;
   top: 15%;
   right: -50%;
-  z-index: 1; 
+  z-index: 1;
 
   @include respond(phone) {
     font-size: 16.6rem;
     right: -15%;
   }
 }
-
 
 // !MÉDIA
 /* 
@@ -71,26 +70,26 @@ xxpx/16px = xxem       |
 
 @mixin respond($breakpoint) {
   @if $breakpoint == phone {
-    @media (min-width: 37.5rem)  { 
-      @content
-    };
+    @media (min-width: 37.5rem) {
+      @content;
+    }
   }
 
   @if $breakpoint == tab-port {
-    @media (min-width: 56.2rem) /* 900px/16px */{
-      @content
-    };
+    @media (min-width: 56.2rem) /* 900px/16px */ {
+      @content;
+    }
   }
 
   @if $breakpoint == tab-land {
-    @media (min-width: 75rem) /* 1200px/16px */{
-      @content
-    };
+    @media (min-width: 75rem) /* 1200px/16px */ {
+      @content;
+    }
   }
 
   @if $breakpoint == big-desktop {
-    @media (min-width: 112.5rem) /* 1800px/16px */{
-      @content
-    };
+    @media (min-width: 112.5rem) /* 1800px/16px */ {
+      @content;
+    }
   }
 }
