--- a/assets/scss/homepage/_about.scss
+++ b/assets/scss/homepage/_about.scss
@@ -12,17 +12,16 @@
     text-transform: uppercase;
     letter-spacing: 0.2rem;
     text-align: center;
-    
 
     @include respond(tab-land) {
       letter-spacing: 0.6rem;
     }
   }
 
-  .bar-items {   
+  .bar-items {
     display: flex;
-    justify-content: center;  
-    gap: 2rem; 
+    justify-content: center;
+    gap: 2rem;
 
     li {
       font-size: 2rem;
@@ -55,7 +54,7 @@
         grid-template-columns: 15rem 1fr;
         background-color: $cl-gray-800;
         border-radius: 4px;
-        box-shadow: inset 0.4rem 0 $cl-red-700, 0 0 5px $cl-gray-900;
+        box-shadow: inset 0.4rem 0 $cl-primary, 0 0 5px $cl-gray-900;
         padding: 1rem;
 
         &__icon {
@@ -187,9 +186,9 @@
 
   &__hero {
     @include container-section;
-    display: grid;    
+    display: grid;
     overflow: hidden;
-    position: relative;   
+    position: relative;
 
     @include respond(phone) {
       grid-template-columns: 1fr 1fr;
@@ -197,10 +196,10 @@
 
     &-left {
       position: relative;
-      height: 100%;      
+      height: 100%;
 
       &::after {
-        content: '';       
+        content: '';
         background-image: url('/assets/img/about-img.png');
         background-position: bottom;
         background-size: cover;
@@ -209,8 +208,8 @@
         position: absolute;
         top: -6rem;
         left: -2rem;
-        opacity: .8;
-        filter: brightness(.35);
+        opacity: 0.8;
+        filter: brightness(0.35);
         z-index: 5;
 
         @include respond(phone) {
@@ -234,7 +233,7 @@
       width: 5rem;
       top: 10%;
       left: 3%;
-      z-index: 10;      
+      z-index: 10;
     }
 
     .title-left {
@@ -245,7 +244,7 @@
     &-right {
       position: relative;
       height: 100%;
-      z-index: 10;      
+      z-index: 10;
 
       &-description {
         position: absolute;
@@ -261,14 +260,14 @@
         @include respond(phone) {
           left: 50%;
           transform: translate(5%, -40%);
-        }     
+        }
 
         h3 {
           font-size: 2.8rem;
           font-weight: 400;
         }
 
-        p{
+        p {
           font-weight: 300;
         }
 
@@ -286,8 +285,6 @@
       @include title-right;
       z-index: 1;
     }
-
- 
   }
 
   &__skills {
