--- a/assets/scss/homepage/_projects.scss
+++ b/assets/scss/homepage/_projects.scss
@@ -8,7 +8,7 @@
   overflow: hidden;
   display: flex;
   align-items: center;
-  justify-content: center;  
+  justify-content: center;
 
   .detail-1 {
     position: absolute;
@@ -24,7 +24,7 @@
     bottom: 15%;
 
     @include respond(phone) {
-      color: $cl-red-700;
+      color: $cl-primary;
       letter-spacing: 1.2rem;
       bottom: 10%;
     }
@@ -54,7 +54,6 @@
     cursor: grab;
     user-select: none;
     padding-inline: 0.5rem;
-    
 
     @include respond(phone) {
       padding-inline: 8rem;
@@ -65,15 +64,14 @@
       height: 45rem;
     }
 
-    .card {      
+    .card {
       background-color: $cl-gray-800;
-      box-shadow: inset 0.4rem 0 $cl-red-700, 0 0 15px $cl-gray-900;
+      box-shadow: inset 0.4rem 0 $cl-primary, 0 0 15px $cl-gray-900;
       border-radius: 1rem;
       display: flex;
-      flex-direction: column;   
+      flex-direction: column;
       height: 45rem;
       overflow: hidden;
-         
 
       @include respond(phone) {
         flex-direction: row;
@@ -83,12 +81,12 @@
       }
 
       @include respond(tab-port) {
-        flex-direction: row;       
+        flex-direction: row;
       }
 
       &-img {
         margin: 2rem;
-        overflow: hidden;              
+        overflow: hidden;
         height: 30rem;
         display: flex;
         align-items: center;
@@ -119,11 +117,11 @@
       &-description {
         padding: 2rem 4rem;
         display: flex;
-        flex-direction: column;        gap: 1rem;
-        
+        flex-direction: column;
+        gap: 1rem;
+
         height: 40rem;
         position: relative;
-        
 
         @include respond(phone) {
           border-left: 0.4rem solid $cl-gray-600;
