--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1128,7 +1128,7 @@ a {
 
 ::-webkit-scrollbar-thumb {
   background-image: linear-gradient(to bottom, #025555, #025555);
-  border-left: 2px solid #181818;
+  box-shadow: inset 2px 0 #181818;
   border-radius: 1px;
 }
 
