--- a/assets/scss/homepage/_projects.scss
+++ b/assets/scss/homepage/_projects.scss
@@ -3,7 +3,7 @@
 
 .projects {
   position: relative;
-  height: 90rem;
+  height: 70rem;
   width: 100%;
   overflow: hidden;
   display: flex;
@@ -12,7 +12,7 @@
 
   .detail-1 {
     position: absolute;
-    bottom: 10%;
+    bottom: 2%;
     left: 3%;
     width: 5rem;
   }
@@ -21,12 +21,12 @@
     @include title-left;
     color: $cl-gray-600;
     letter-spacing: 0.5rem;
-    bottom: 15%;
+    bottom: 5%;
 
     @include respond(phone) {
       color: $cl-primary;
       letter-spacing: 1.2rem;
-      bottom: 10%;
+      bottom: 2%;
     }
   }
 
@@ -42,8 +42,8 @@
 
   .detail-3 {
     position: absolute;
-    top: 10%;
-    left: 0;
+    top: 5%;
+    right: 20%;    
   }
 
   .swiper {
