--- a/assets/scss/global/_variables.scss
+++ b/assets/scss/global/_variables.scss
@@ -1,4 +1,4 @@
-$cl-primary: #025555;
+$cl-primary: #9b1212;
 $cl-white-100: #fff;
 $cl-white-400: #d8d8d8;
 $cl-gray-100: #afafaf;
@@ -7,3 +7,4 @@ $cl-gray-700: #282828;
 $cl-gray-800: #181818;
 $cl-gray-900: #111;
 $cl-black: #000;
+$color:#690101;
