o retorno do rei

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -354,9 +354,9 @@ a {
 }
 .about__hero-left::after {
   content: "";
-  background-image: url("/assets/img/img_about.png");
-  background-position: bottom;
-  background-size: cover;
+  background-image: url("https://raw.githubusercontent.com/cunham4theus/fotos/main/img/401851109_18024935203805755_2437252116937850808_n%20(1).jpg?token=GHSAT0AAAAAACM4Z3IU7V7G2ONONN5G3CXSZOEASVA");
+  background-position: center;
+  background-size: contain;
   background-repeat: no-repeat;
   display: block;
   position: absolute;
