--- a/assets/scss/homepage/_about.scss
+++ b/assets/scss/homepage/_about.scss
@@ -107,7 +107,7 @@
 
       &::after {
         content: '';
-        background-image: url('https://raw.githubusercontent.com/cunham4theus/fotos/main/img/401851109_18024935203805755_2437252116937850808_n%20(1).jpg?token=GHSAT0AAAAAACM4Z3IU7V7G2ONONN5G3CXSZOEASVA');
+        background-image: url('https://i.postimg.cc/bNLM0dzN/401851109-18024935203805755-2437252116937850808-n-1.jpg');
         background-position: center;
         background-size: contain;
         background-repeat: no-repeat;
