--- a/assets/scss/global/_variables.scss
+++ b/assets/scss/global/_variables.scss
@@ -8,3 +8,8 @@ $cl-gray-800: #181818;
 $cl-gray-900: #111;
 $cl-black: #000;
 $color:#690101;
+$cl-primary-gradient: linear-gradient(
+  to right bottom,
+  rgba(#bb02c2, 0.86),
+  rgba(#5643fa, 0.86)
+);
