--- a/assets/scss/global/_components.scss
+++ b/assets/scss/global/_components.scss
@@ -5,9 +5,9 @@
   max-width: 140rem;
   margin-inline: auto;
   background-image: linear-gradient(
-    to right,
-    $cl-gray-900 99%,
-    $cl-primary 1%
+    to left,
+    $cl-gray-900 99.5%,
+    $cl-primary .5%
   );
 }
 
